--- a/MyTrails/MyTrails.csproj
+++ b/MyTrails/MyTrails.csproj
@@ -211,6 +211,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Libraries\GeoJSONTools.cs" />
     <Compile Include="Libraries\Scraper.cs" />
     <Compile Include="Migrations\201808051752544_initialCreate.cs" />
     <Compile Include="Migrations\201808051752544_initialCreate.Designer.cs">
@@ -240,6 +241,7 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="MapData\OlympicTrailData.json" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -347,6 +349,7 @@
           <SaveServerSettingsInUserFile>False</SaveServerSettingsInUserFile>
         </WebProjectProperties>
       </FlavorProperties>
+      <UserProperties MapData_4OlympicTrailData_1json__JSONSchema="http://json.schemastore.org/geojson" />
     </VisualStudio>
   </ProjectExtensions>
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
