--- a/MyTrails/MyTrails.csproj
+++ b/MyTrails/MyTrails.csproj
@@ -324,6 +324,7 @@
     <Content Include="Views\Condition\Edit.cshtml" />
     <Content Include="Views\Condition\Index.cshtml" />
     <Content Include="Views\Trail\Combine.cshtml" />
+    <Content Include="Views\Trail\Map.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
