Created method in conditions controller that checks for new condtions and adds them to the database

--- a/MyTrails/MyTrails.csproj
+++ b/MyTrails/MyTrails.csproj
@@ -326,6 +326,7 @@
     <Content Include="Views\Condition\Index.cshtml" />
     <Content Include="Views\Trail\Combine.cshtml" />
     <Content Include="Views\Trail\Map.cshtml" />
+    <Content Include="Views\Condition\ImportNewConditions.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
