--- a/MyTrails/MyTrails.csproj
+++ b/MyTrails/MyTrails.csproj
@@ -327,6 +327,7 @@
     <Content Include="Views\Trail\Combine.cshtml" />
     <Content Include="Views\Trail\Map.cshtml" />
     <Content Include="Views\Condition\ImportNewConditions.cshtml" />
+    <Content Include="Views\Trail\Index.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
