--- a/MyTrails/MyTrails.csproj
+++ b/MyTrails/MyTrails.csproj
@@ -325,9 +325,10 @@
     <Content Include="Views\Condition\Edit.cshtml" />
     <Content Include="Views\Condition\Index.cshtml" />
     <Content Include="Views\Trail\ManuallyAddJsonToDb.cshtml" />
-    <Content Include="Views\Trail\Map.cshtml" />
+    <Content Include="Views\Trail\OLMap.cshtml" />
     <Content Include="Views\Condition\ImportNewConditions.cshtml" />
     <Content Include="Views\Trail\Index.cshtml" />
+    <Content Include="Views\Trail\MapIndex.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
