--- a/MyTrails/MyTrails.csproj
+++ b/MyTrails/MyTrails.csproj
@@ -260,6 +260,7 @@
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
+    <Content Include="Scripts\map.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
@@ -329,6 +330,7 @@
     <Content Include="Views\Condition\ImportNewConditions.cshtml" />
     <Content Include="Views\Trail\Index.cshtml" />
     <Content Include="Views\Trail\MapIndex.cshtml" />
+    <Content Include="Views\Shared\_Map.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
